--- a/project.config.json
+++ b/project.config.json
@@ -34,7 +34,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.21.0",
-  "appid": "wxa7b695002d69fafe",
+  "appid": "wx644df112d52605d5",
   "projectname": "depression",
   "debugOptions": {
     "hidedInDevtools": []
