--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/logs/logs",
     "pages/home/home",
-    "pages/diagnose/diagnose",
+    "pages/diagnosis/diagnosis",
+    "pages/audio/audio",
     "pages/chat/chat",
     "pages/luntan/luntan",
     "pages/me/me",
