--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
     "pages/luntan/release/selectCity/selectCity",
     "pages/luntan/release/title/title",
     "pages/luntan/release/vote/vote",
-    "pages/luntan/release/zhichi/zhichi"
+    "pages/luntan/release/zhichi/zhichi",
+    "pages/tipDetail/tipDetail"
   ],
   "window": {
     "backgroundTextStyle": "light",
