写了点聊天室

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -55,12 +55,6 @@
           "scene": null
         },
         {
-          "name": "pages/home/home",
-          "pathName": "pages/home/home",
-          "query": "",
-          "scene": null
-        },
-        {
           "name": "pages/tips/tips",
           "pathName": "pages/tips/tips",
           "query": "",
@@ -79,8 +73,8 @@
           "scene": null
         },
         {
-          "name": "pages/doctor/doctor",
-          "pathName": "pages/doctor/doctor",
+          "name": "pages/home/doctor/doctor",
+          "pathName": "pages/home/doctor/doctor",
           "query": "",
           "scene": null
         },
@@ -93,6 +87,30 @@
         {
           "name": "pages/chat/chat",
           "pathName": "pages/chat/chat",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/me/file/index",
+          "pathName": "pages/me/file/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/me/record/index",
+          "pathName": "pages/me/record/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/me/information/index",
+          "pathName": "pages/me/information/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/me/help/index",
+          "pathName": "pages/me/help/index",
           "query": "",
           "scene": null
         }
