errors_in_release

--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.21.0",
-  "appid": "wx644df112d52605d5",
+  "appid": "wxd114542303074ab3",
   "projectname": "depression",
   "debugOptions": {
     "hidedInDevtools": []
