--- a/app.json
+++ b/app.json
@@ -68,7 +68,7 @@
         "selectedIconPath": "images/诊断.png"
       },
       {
-        "pagePath": "pages/chat/chat",
+        "pagePath": "pages/chat/friends/friends",
         "text": "聊天室",
         "iconPath": "images/聊天.png",
         "selectedIconPath": "images/聊天.png"
