--- a/app.json
+++ b/app.json
@@ -51,7 +51,7 @@
   "tabBar": {
     "color": "#bbbbbb",
     "selectedColor": "#6ec2aa",
-    "backgroundColor": "",
+    "backgroundColor": "white",
     "position": "bottom",
     "borderStyle": "black",
     "list": [
