--- a/project.private.config.json
+++ b/project.private.config.json
@@ -131,6 +131,12 @@
           "pathName": "pages/diagnose/check/check",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "",
+          "pathName": "pages/home/doctor/doctor",
+          "query": "",
+          "scene": null
         }
       ]
     }
