--- a/project.private.config.json
+++ b/project.private.config.json
@@ -143,6 +143,12 @@
           "pathName": "pages/luntan/release/release",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "",
+          "pathName": "pages/luntan/searchRes/searchRes",
+          "query": "",
+          "scene": null
         }
       ]
     }
